Fix Bug "TaskProgress overlaps Tasks"

--- a/imports/client/styles/_base.scss
+++ b/imports/client/styles/_base.scss
@@ -56,3 +56,7 @@ body > div {
 .ui.modal {
   top: 20%;
 }
+
+.ui.fluid.steps {
+  width: 200px;
+}
